--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ S3method(plot,mesh.2.5D)
 S3method(plot,mesh.2D)
 S3method(plot,mesh.3D)
 export(DE.FEM)
+export(DE.FEM.time)
 export(DE.heat.FEM)
+export(DE.heat.FEM.time)
 export(FEM)
 export(FEM.time)
 export(FPCA.FEM)
